# purdah-ui

./: .gitignore  AUDIT_REPORT.md  Cargo.toml  HYBRID_ARCHITECTURE.md  LICENSE  README.md
claudedocs/: GPUIComponentLibraryDesign.md
docs/: WEBVIEW_GUIDE.md  ZSTACK_GUIDE.md  getting-started.md  theming.md
docs/architecture/: FLUX_IMPLEMENTATION_PLAN.md  HYBRID_TEA_FLUX_PLAN.md  TEA_IMPLEMENTATION_PLAN.md
docs/product-development/current-feature/: PRD.md  plan.md
examples/: chat_forks_3d.rs  dashboard.rs  flux_todo.rs  form_demo.rs  hybrid_counter.rs  showcase.rs  webview_demo.rs
src/: lib.rs  prelude.rs
src/atoms/: avatar.rs  badge.rs  button.rs  checkbox.rs  icon.rs  icons.rs  input.rs  label.rs  mod.rs  radio.rs  spinner.rs  switch.rs
src/bridges/: mod.rs
src/devtools/: mod.rs
src/flux/: action.rs  middleware.rs  mod.rs  store.rs
src/layout/: container.rs  divider.rs  mod.rs  spacer.rs  stack.rs  zstack.rs
src/molecules/: card.rs  dropdown.rs  form_group.rs  mod.rs  popover.rs  search_bar.rs  tab_group.rs  tooltip.rs
src/organisms/: command_palette.rs  dialog.rs  drawer.rs  mod.rs  table.rs  webview.rs
src/tea/: command.rs  mod.rs  model.rs  subscription.rs
src/theme/: mod.rs  themes.rs  tokens.rs
src/unified/: container.rs  dispatcher.rs  event.rs  mod.rs  runtime.rs
src/utils/: announcer.rs  focus_trap.rs  mod.rs
