[package]
name = "purdah-gpui-components"
version = "0.1.0"
edition = "2021"
authors = ["Purdah Contributors"]
description = "High-level component library built on GPUI for improved developer experience"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mcfearsome/purdah-ui"
keywords = ["gpui", "ui", "components", "desktop"]
categories = ["gui"]

[dependencies]
# GPUI dependency - using a recent stable commit
# TODO: Update to a stable release once GPUI is published to crates.io
gpui = { git = "https://github.com/zed-industries/zed" }

[dev-dependencies]

[lib]
name = "purdah_gpui_components"
path = "src/lib.rs"

# Examples will be added as components are implemented
# [[example]]
# name = "showcase"
# path = "examples/showcase.rs"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
